fixed alignment with hashtag

--- a/ELI5.css
+++ b/ELI5.css
@@ -36,7 +36,7 @@ html {
   font-family: sans-serif;
   letter-spacing: 0.05em;
   font-size: 1.2em;
-  padding-left: 0.75em;
+  padding-left: 1.5em;
 }
 .explain:hover {
   color: rgb(8, 92, 248);
